syntax = "proto3";
package persistence;

option java_multiple_files = false;
option java_package = "no.elg.infiniteBootleg.protobuf";
option java_outer_classname = "ProtoWorld";

message Vector2f {
  float x = 1;
  float y = 2;
}

message Vector2i {
  sint32 x = 1;
  sint32 y = 2;
}

message Material {
  int32 ordinal = 1; //ordinal from Material enum
}

message World {
  int64 seed = 1;
  string name = 2;
  float time = 3;
  Vector2i spawn = 4;
  float timeScale = 5;
  repeated ChunkColumn chunkColumns = 6;

  Generator generator = 16;
  optional Entity player = 17;

  enum Generator {
    PERLIN = 0;
    FLAT = 1;
    EMPTY = 2;
  }
}

message Block {
  Material material = 1;
  optional Entity entity = 2;
}

message Chunk {
  Vector2i position = 1;
  repeated Block blocks = 2;
  repeated Entity entities = 3;
}

message ChunkColumn {
  int32 chunkX = 1;
  repeated int32 top_solid_blocks = 2;
  repeated int32 top_transparent_blocks = 3;
}

message Entity {
  EntityType type = 1;
  Vector2f position = 2;
  optional Tags tags = 3;
  string uuid = 4;
  optional string name = 5;

  optional Killable killable = 16;
  optional Material material = 17;
  optional Player player = 18;
  optional Vector2f velocity = 19;
  optional Explosive explosive = 20;
  optional Inventory inventory = 21;

  enum EntityType {
    GENERIC_ENTITY = 0; // default
    FALLING_BLOCK = 1; //Standalone falling block
    BLOCK = 2; // Entity related to a grid block
    PLAYER = 3; // A human controlled entity
  }

  message Tags {
    optional bool flying = 1;
    optional bool followedByCamera = 2;
    optional bool gravityAffected = 3;
    optional bool ignorePlaceableCheck = 4;
  }

  message Killable {
    int32 health = 1;
    int32 max_health = 2;
  }

  message Player {
    float torch_angle_deg = 1;
    bool controlled = 2;
  }

  message Explosive{
    float fuse = 1;
    float strength = 2;
  }

  message Inventory {
    int32 maxSize = 1;
    repeated Item items = 2;

    message Item {
      Material material = 1;
      uint32 stock = 2;
      uint32 maxStock = 3;
    }
  }
}
